--- a/html/template.html
+++ b/html/template.html
@@ -32,7 +32,7 @@
 
 
 </head>
-<body>
+<body style="margin: 0;">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">ДанCофтКомпани</a>
